fixed nav bg to match new dark mode bg changed theme color to R logo color

--- a/assets/sass/_override.sass
+++ b/assets/sass/_override.sass
@@ -6,8 +6,8 @@ $images: '../images/'
 $light: #f0f0f0
 $haze: #fafafa
 $xhaze: darken($haze, 11%)
-$bg: #000000 // nav background
-$theme: #d4e4f7
+$bg: #141517 // nav background (match dark mode bg)
+$theme: #2369bd
 
 @mixin  content()
   --maxWidth: 1440px
